# MoneyMaker

./: .gitignore  ExecutorScript
backend/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt
backend/alerts/: __init__.py  service.py
backend/analytics_api/: __init__.py  routes.py
backend/api/: auth.py  deps.py  main.py  schemas.py
backend/audit_center/: __init__.py  service.py
backend/backfill_orchestrator/: __init__.py  service.py
backend/bootstrap_training/: __init__.py  service.py
backend/calibration/: __init__.py  service.py
backend/calibration_intelligence/: __init__.py  service.py
backend/core/: config.py  math_utils.py
backend/data_pipeline/: __init__.py  providers.py  service.py
backend/db/: __init__.py  repository.py  supabase_client.py
backend/drift_detection/: __init__.py  service.py
backend/drift_visualization/: __init__.py  service.py
backend/ensemble/: __init__.py  service.py
backend/entry_engine/: service.py
backend/execution_engine/: service.py
backend/expected_move/: service.py
backend/features/: __init__.py  indicators.py
backend/feedback/: __init__.py  service.py
backend/guardrails/: __init__.py  service.py
backend/historical_api/: __init__.py  routes.py
backend/historical_backfill/: __init__.py  chunks.py  fetcher.py  service.py
backend/historical_features/: __init__.py  compute.py  service.py
backend/historical_regimes/: __init__.py  service.py
backend/historical_replay/: __init__.py  context.py  engine.py  outcomes.py  portfolio.py  (+3 more)
(+236 files in other folders)
