[project]
name = "moneymaker-backend"
version = "0.1.0"
description = "Production-grade FastAPI backend for an AI trading assistant."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.3.0",
  "supabase>=2.6.0",
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "xgboost>=2.1.0",
  "lightgbm>=4.5.0",
  "ta>=0.11.0",
  "celery[redis]>=5.4.0",
  "redis>=5.0.0",
  "PyJWT[crypto]>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"
